# maya_test_v01

./: README.md  pyproject.toml
dashboard/: index.html  package-lock.json
dashboard/src/: App.css  App.tsx  index.css  types.ts
dashboard/src/context/: platformContexts.ts
dashboard/src/lib/: aiGenerate.ts  id.ts
dashboard/src/storage/: catalogStorage.ts
docs/: naming-convention.md  qa-checklist.md  release-versioning.md
docs/api-references/: 3ds-max.md  README.md  blender.md  maya.md  substance-painter.md  unreal-engine.md
tests/: test_core_naming_versioning.py  test_core_results_logging_export.py  test_core_strategy_qa.py  test_maya_optimizer.py  test_maya_safe_dryrun.py
tools/: README.md  __init__.py
tools/maya_uv_path_optimizer/: __init__.py
tools/maya_uv_path_optimizer/core/: __init__.py  exporting.py  logging.py  naming.py  qa.py  result.py  strategy.py  versioning.py
tools/maya_uv_path_optimizer/maya/: __init__.py  commands.py  dry_run.py  exporter.py  mel_bridge.py  optimizer.py  safe_ops.py
tools/maya_uv_path_optimizer/mel/: maya_uv_path_optimizer.mel
tools/maya_uv_path_optimizer/resources/: default_preset.json
tools/maya_uv_path_optimizer/ui/: __init__.py  theme.py  window.py
