[project]
name = "maya-uv-path-optimizer"
version = "0.1.0"
description = "Production Maya 2027 UV optimization tool with dry run, QA, logging, and safe export workflows."
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
